--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Página web responsiva del proyecto De patria a patria creada como parte del Proyecto 5 de TripleTen."
-    />
-    <meta
-      name="keywords"
-      content="TripleTen, proyecto web, HTML, CSS, BEM, responsive, desarrollo web"
-    />
+    <meta name="author" content="Alejandra Islas" />
+    <meta name="description" content="Página web responsiva del proyecto De patria a patria creada como parte del Proyecto 5 de TripleTen." />
+    <meta name="keywords" content="TripleTen, proyecto web, HTML, CSS, BEM, responsive, desarrollo web" />
+    
     <title>De patria a patria</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./pages/index.css" />
