Proyecto 5. Corrección 4 HTML

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <body class="page">
-    <div class="page__content">
+  <body class="site">
+    <div class="page">
       <header class="header">
         <div class="header__logo-wrapper">
           <img
